--- a/jupyter-py/Load-bloomberg-data.ipynb
+++ b/jupyter-py/Load-bloomberg-data.ipynb
@@ -9,8 +9,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import statsmodels.api as sm"
+    "import statsmodels.api as sm\n",
+    "\n",
+    "import itertools"
    ]
   },
   {
@@ -40,8 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_names = data[\"raw\"].columns.values.tolist()\n",
-    "stock_names"
+    "stock_names = data[\"raw\"].columns.values.tolist()"
    ]
   },
   {
@@ -51,23 +53,6 @@
    "outputs": [],
    "source": [
     "data[\"raw\"].index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(data[\"raw\"][\"5 HK Equity\"])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Correlation"
    ]
   },
   {
@@ -101,24 +86,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"valid_stocks\"].corr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"valid_stocks\"].corr().values"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -128,12 +95,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data[\"valid_stocks_log\"] = np.log(data[\"valid_stocks\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"valid_stocks_log\"].corr()"
    ]
   },
   {
@@ -158,6 +139,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "get_k_most_correlated_pairs(data[\"valid_stocks_log\"][-training_size-buffer:-buffer], 20)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,12 +159,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from statsmodels.tsa.stattools import coint, adfuller"
+    "import pair_selector\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "\n",
+    "buffer = 100\n",
+    "training_size = 500\n",
+    "\n",
+    "cointegrated_pairs = pair_selector.coint(data[\"valid_stocks_log\"], intercept=True, sig_level=0.005)"
    ]
   },
   {
@@ -181,82 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer = 60\n",
-    "training_size = 100\n",
-    "\n",
-    "data[\"valid_stocks_log\"][-training_size-buffer: -buffer]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_k_most_correlated_pairs(data[\"valid_stocks_log\"][-training_size-buffer:-buffer], 20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_cointegrated_pairs(df, sig_level = 0.01):\n",
-    "    cointegrated_pairs = []\n",
-    "    \n",
-    "    stock_names = df.columns.values.tolist()\n",
-    "    N = len(stock_names)\n",
-    "    \n",
-    "    for i in range(0, N - 1):\n",
-    "        for j in range(i + 1, N):\n",
-    "            stock_1 = stock_names[i]\n",
-    "            stock_2 = stock_names[j]\n",
-    "            \n",
-    "            p_value = coint(df[stock_1].values, df[stock_2].values, trend='c')[1]\n",
-    "            \n",
-    "            if p_value < sig_level:\n",
-    "                cointegrated_pairs.append(tuple([stock_1, stock_2]))\n",
-    "\n",
-    "    return cointegrated_pairs\n",
-    "\n",
-    "def get_cointegrated_pairs_manual(df, sig_level = 0.0005):\n",
-    "    cointegrated_pairs = []\n",
-    "    \n",
-    "    stock_names = df.columns.values.tolist()\n",
-    "    N = len(stock_names)\n",
-    "    \n",
-    "    for i in range(0, N - 1):\n",
-    "        for j in range(i + 1, N):\n",
-    "            stock_1 = stock_names[i]\n",
-    "            stock_2 = stock_names[j]\n",
-    "            \n",
-    "            Y = df[stock_1]\n",
-    "            X = df[stock_2]\n",
-    "            X = sm.add_constant(X)\n",
-    "            \n",
-    "            model = sm.OLS(Y, X)\n",
-    "            results = model.fit()\n",
-    "            \n",
-    "            p_value = adfuller(results.resid)[1]\n",
-    "            \n",
-    "            if p_value < sig_level:\n",
-    "                cointegrated_pairs.append(tuple([stock_1, stock_2]))\n",
-    "\n",
-    "    return cointegrated_pairs\n",
-    "\n",
-    "cointegrated_pairs = get_cointegrated_pairs(data[\"valid_stocks_log\"][-training_size-buffer:-buffer])\n",
-    "cointegrated_pairs_manual = get_cointegrated_pairs_manual(data[\"valid_stocks_log\"][-training_size-buffer:-buffer])\n",
-    "cointegrated_pairs_manual"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for stock_pair in cointegrated_pairs_manual:\n",
+    "for stock_pair in cointegrated_pairs:\n",
     "    print(\"Checking pair: \" + stock_pair[0] + \", \" + stock_pair[1])\n",
     "\n",
     "    plt.plot(data[\"valid_stocks_log\"][stock_pair[0]][-training_size-buffer:-buffer])\n",
@@ -272,12 +193,12 @@
     "    # Y = beta*X + C\n",
     "    model = sm.OLS(Y, X)\n",
     "    results = model.fit()\n",
-    "    results.params\n",
+    "    \n",
+    "    print(results.params)\n",
     "\n",
     "    plt.plot(results.resid)\n",
     "    plt.show()\n",
     "\n",
-    "    # adfuller(results.resid)\n",
     "\n",
     "    ls = []\n",
     "\n",
@@ -297,11 +218,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import itertools\n",
-    "\n",
     "def get_cointegrated_triplets(df, sig_level = 0.001):\n",
     "    cointegrated_triplets = []\n",
     "    \n",
@@ -310,35 +231,26 @@
     "    N = len(triplets)\n",
     "    \n",
     "    for triplet in triplets:\n",
-    "            stock_1, stock_2, stock_3 = triplet\n",
-    "            \n",
-    "            Y = df[stock_1]\n",
-    "            X = df[[stock_2, stock_3]]\n",
-    "            X = sm.add_constant(X)\n",
+    "        stock_1, stock_2, stock_3 = triplet\n",
     "\n",
-    "            model = sm.OLS(Y, X)\n",
-    "            results = model.fit()\n",
+    "        Y = df[stock_1]\n",
+    "        X = df[[stock_2, stock_3]]\n",
+    "        X = sm.add_constant(X)\n",
     "\n",
-    "            p_value = adfuller(results.resid)[1]\n",
+    "        model = sm.OLS(Y, X)\n",
+    "        results = model.fit()\n",
     "\n",
-    "            if p_value < sig_level:\n",
-    "                cointegrated_triplets.append(tuple([stock_1, stock_2, stock_3]))\n",
-    "                plt.plot(results.resid)\n",
-    "                plt.show()\n",
+    "        p_value = adfuller(results.resid)[1]\n",
+    "\n",
+    "        if p_value < sig_level:\n",
+    "            cointegrated_triplets.append(tuple([stock_1, stock_2, stock_3]))\n",
+    "            plt.plot(results.resid)\n",
+    "            plt.show()\n",
     "\n",
     "    return cointegrated_triplets\n",
     "\n",
     "cointegrated_triplets = get_cointegrated_triplets(data[\"valid_stocks_log\"][-training_size-buffer:-buffer])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
