added brendan's code - edited

--- a/jupyter-py/IB_load_data.ipynb
+++ b/jupyter-py/IB_load_data.ipynb
@@ -2,30 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting full contract details from the server... \n",
-      "IB error id -1 errorcode 2104 string Market data farm connection is OK:njfarm.nj\n",
-      "IB error id -1 errorcode 2104 string Market data farm connection is OK:hfarm\n",
-      "IB error id -1 errorcode 2104 string Market data farm connection is OK:eufarm\n",
-      "IB error id -1 errorcode 2104 string Market data farm connection is OK:njopt\n",
-      "IB error id -1 errorcode 2104 string Market data farm connection is OK:usfuture\n",
-      "IB error id -1 errorcode 2104 string Market data farm connection is OK:usfuture.us\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:ushmds.us\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:ilhmds\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:euhmds\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:cashhmds\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:hkhmds\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:ushmds\n",
-      "Getting historical data from the server... could take 10 seconds to complete \n",
-      "IB error id 50 errorcode 162 string Historical Market Data Service error message:No market data permissions for SEHK STK\n",
-      "Exceeded maximum wait for wrapper to confirm finished - seems to be normal behaviour\n",
-      "[]\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ibapi'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-28345f2b5328>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;31m#\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mibapi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrapper\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEWrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mibapi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclient\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEClient\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mibapi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontract\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mContract\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mIBcontract\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ibapi'"
      ]
     }
    ],
@@ -332,14 +320,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +343,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
