Added all relevant files

--- a/jupyter-py/TWS_bulk_load.ipynb
+++ b/jupyter-py/TWS_bulk_load.ipynb
@@ -1,12 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import packages\n",
+    "\n",
+    "**Remark:** ib_insync is a very useful third party library that can send *blocking* requests to Interactive Brokers. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from IB_load_data import *\n",
+    "from datetime import datetime\n",
+    "from datetime import timedelta\n",
+    "from matplotlib import pyplot as plt\n",
+    "from ib_insync import *\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -16,25 +29,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "nyse_tech_names = pd.read_csv(filepath_or_buffer = \"../stock-names/nyse_tech_list.csv\")[\"Symbol\"]\n",
-    "nasdaq_tech_names = pd.read_csv(filepath_or_buffer = \"../stock-names/nasdaq_tech_list.csv\")[\"Symbol\"]"
+    "## Load Names of Tech Companies listed on NYSE and NASDAQ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Load NYSE tech stocks\n",
-    "\n",
-    "# for symbol in nyse_tech_names:\n",
-    "    "
+    "nyse_tech_names = list(pd.read_csv(filepath_or_buffer = \"../stock-names/nyse_tech_list.csv\")[\"Symbol\"])\n",
+    "nasdaq_tech_names = list(pd.read_csv(filepath_or_buffer = \"../stock-names/nasdaq_tech_list.csv\")[\"Symbol\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connect to IB"
    ]
   },
   {
@@ -43,143 +60,196 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting full contract details from the server... \n",
-      "IB error id -1 errorcode 2104 string Market data farm connection is OK:usfuture.nj\n",
-      "IB error id -1 errorcode 2104 string Market data farm connection is OK:usfarm.nj\n",
-      "IB error id -1 errorcode 2104 string Market data farm connection is OK:usopt\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:ushmds.us\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:njhmds\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:hkhmds\n",
-      "IB error id -1 errorcode 2106 string HMDS data farm connection is OK:ushmds\n",
-      "Getting historical data from the server... could take 180 seconds to complete \n"
-     ]
-    }
-   ],
-   "source": [
-    "app = TestApp(\"127.0.0.1\", 7497, 77)\n",
-    "\n",
-    "start_time = timeit.timeit()\n",
-    "\n",
-    "ibcontract = IBcontract()\n",
-    "ibcontract.secType = \"STK\"\n",
-    "ibcontract.symbol=\"C\"\n",
-    "ibcontract.exchange=\"NYSE\"\n",
-    "\n",
-    "resolved_ibcontract=app.resolve_ib_contract(ibcontract)\n",
-    "\n",
-    "historic_data = app.get_IB_historical_data(resolved_ibcontract, durationStr=\"20 D\", barSizeSetting=\"1 min\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# app.disconnect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Used -0.0015473062539539013secs\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Used \" + str((end_time - start_time)) + \"secs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "('20190104  04:59:00', 52.715, 52.755, 52.45, 52.585, -1)"
+       "<IB connected to 127.0.0.1:7497 clientId=1>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "historic_data[-1]"
+    "ib = IB()\n",
+    "ib.connect('127.0.0.1', 7497, clientId=1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('20181204  22:30:00', 64.585, 64.585, 64.48, 64.48, -1)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "historic_data[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp_df = pd.DataFrame(historic_data)\n",
-    "temp_df[0] = pd.to_datetime(temp_df[0], format='%Y%m%d  %H:%M:%S')\n",
-    "temp_df.columns = [\"Time\", \"Open\", \"High\", \"Low\", \"Close\", \"Stuff\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp_df"
+    "## Load NYSE tech stocks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error 354, reqId 40: Requested market data is not subscribed., contract: Stock(symbol='MAXR', exchange='SMART', primaryExchange='NYSE', currency='USD')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data of NYSE: MAXR\n",
+      "Error: 93/172 download aborted.\n",
+      "Downloading data of NYSE: MXL\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error 162, reqId 40: Historical Market Data Service error message:No market data permissions for AMEX, ARCA, NYSENAT, PSX STK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94/172 completed.\n",
+      "Downloading data of NYSE: MFGP\n",
+      "95/172 completed.\n",
+      "Downloading data of NYSE: MCRN\n",
+      "96/172 completed.\n",
+      "Downloading data of NYSE: MIXT\n",
+      "97/172 completed.\n",
+      "Downloading data of NYSE: MODN\n",
+      "98/172 completed.\n",
+      "Downloading data of NYSE: MSI\n",
+      "99/172 completed.\n",
+      "Downloading data of NYSE: NPTN\n",
+      "100/172 completed.\n",
+      "Downloading data of NYSE: NEWR\n",
+      "101/172 completed.\n",
+      "Downloading data of NYSE: NOK\n",
+      "102/172 completed.\n",
+      "Downloading data of NYSE: NVT\n",
+      "103/172 completed.\n",
+      "Downloading data of NYSE: OMC\n",
+      "104/172 completed.\n",
+      "Downloading data of NYSE: OOMA\n",
+      "105/172 completed.\n",
+      "Downloading data of NYSE: ORCL\n",
+      "106/172 completed.\n",
+      "Downloading data of NYSE: PAGS\n",
+      "107/172 completed.\n",
+      "Downloading data of NYSE: PANW\n",
+      "108/172 completed.\n",
+      "Downloading data of NYSE: PKE\n",
+      "109/172 completed.\n",
+      "Downloading data of NYSE: PAYC\n",
+      "110/172 completed.\n",
+      "Downloading data of NYSE: PNR\n",
+      "111/172 completed.\n",
+      "Downloading data of NYSE: PRSP\n",
+      "112/172 completed.\n",
+      "Downloading data of NYSE: PVTL\n",
+      "113/172 completed.\n",
+      "Downloading data of NYSE: PRO\n",
+      "114/172 completed.\n",
+      "Downloading data of NYSE: PSTG\n",
+      "115/172 completed.\n",
+      "Downloading data of NYSE: QTWO\n",
+      "116/172 completed.\n",
+      "Downloading data of NYSE: QTM\n",
+      "117/172 completed.\n",
+      "Downloading data of NYSE: RHT\n",
+      "118/172 completed.\n",
+      "Downloading data of NYSE: SOL\n",
+      "119/172 completed.\n",
+      "Downloading data of NYSE: RENN\n",
+      "120/172 completed.\n",
+      "Downloading data of NYSE: RXN\n",
+      "121/172 completed.\n",
+      "Downloading data of NYSE: RNG\n",
+      "122/172 completed.\n",
+      "Downloading data of NYSE: RHI\n"
+     ]
+    }
+   ],
    "source": [
-    "temp_df.to_csv(path_or_buf=\"sample.csv\", index=False)"
+    "for i in range(92, len(nyse_tech_names)):\n",
+    "    stock_name = nyse_tech_names[i]\n",
+    "    \n",
+    "    print(\"Downloading data of NYSE: \" + stock_name)\n",
+    "    \n",
+    "    contract = Stock(stock_name, 'SMART', 'USD', primaryExchange=\"NYSE\")\n",
+    "    bars = ib.reqHistoricalData(contract, endDateTime=\"20190105 04:55:00\", durationStr='4 Y',\n",
+    "            barSizeSetting='5 mins', whatToShow='MIDPOINT', useRTH=True)\n",
+    "    \n",
+    "    # convert to pandas dataframe:\n",
+    "    df = util.df(bars)\n",
+    "    PATH_NAME = \"../ib-data/nyse/\" + str(stock_name) + \".csv\"\n",
+    "    \n",
+    "    if df is None:\n",
+    "        print( \"Error: \" + str(i + 1) + \"/\" + str(len(nyse_tech_names)) + \" download aborted.\")\n",
+    "    else:\n",
+    "        df.to_csv(path_or_buf=PATH_NAME, index=False)\n",
+    "        print( str(i + 1) + \"/\" + str(len(nyse_tech_names)) + \" completed.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Remarks**: \n",
+    "- DELL is skipped because it is a newly relisted symbol on NYSE, no market data permissions to download \n",
+    "- MAXR is skipped."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load NASDAQ tech stocks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "round(1.4)"
+    "for i in range(len(nasdaq_tech_names)):\n",
+    "    stock_name = nasdaq_tech_names[i]\n",
+    "    \n",
+    "    print(\"Downloading data of NASDAQ: \" + stock_name)\n",
+    "    \n",
+    "    contract = Stock(stock_name, 'SMART', 'USD', primaryExchange=\"NASDAQ\")\n",
+    "    bars = ib.reqHistoricalData(contract, endDateTime=\"20190105 04:55:00\", durationStr='4 Y',\n",
+    "            barSizeSetting='5 mins', whatToShow='MIDPOINT', useRTH=True)\n",
+    "    \n",
+    "    # convert to pandas dataframe:\n",
+    "    df = util.df(bars)\n",
+    "    PATH_NAME = \"../ib-data/iex/\" + str(stock_name) + \".csv\"\n",
+    "\n",
+    "    if df is None:\n",
+    "        print( \"Error: \" + str(i + 1) + \"/\" + str(len(nasdaq_tech_names)) + \" download aborted.\")\n",
+    "    else:\n",
+    "        df.to_csv(path_or_buf=PATH_NAME, index=False)\n",
+    "        print( str(i + 1) + \"/\" + str(len(nasdaq_tech_names)) + \" completed.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
