Renamed ipynb files

--- a/jupyter-py/Load-IB-Data-Blocks.ipynb
+++ b/jupyter-py/Load-IB-Data-Blocks.ipynb
@@ -173,7 +173,9 @@
       "121/172 completed.\n",
       "Downloading data of NYSE: RNG\n",
       "122/172 completed.\n",
-      "Downloading data of NYSE: RHI\n"
+      "Downloading data of NYSE: RHI\n",
+      "123/172 completed.\n",
+      "Downloading data of NYSE: RST\n"
      ]
     }
    ],
