Changed to another naming convention for ipynb files

--- a/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
+++ b/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from IB_load_data import *\n",
