added gitignore in ib-data

--- a/jupyter-py/2b-Backtrader-Pairs-Trade.ipynb
+++ b/jupyter-py/2b-Backtrader-Pairs-Trade.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class PairTradingStrategy(bt.Strategy):\n",
