--- a/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
+++ b/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "<IB connected to 127.0.0.1:7497 clientId=1>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,103 +86,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "code_folding": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error 354, reqId 40: Requested market data is not subscribed., contract: Stock(symbol='MAXR', exchange='SMART', primaryExchange='NYSE', currency='USD')\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data of NYSE: MAXR\n",
-      "Error: 93/172 download aborted.\n",
-      "Downloading data of NYSE: MXL\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error 162, reqId 40: Historical Market Data Service error message:No market data permissions for AMEX, ARCA, NYSENAT, PSX STK\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "94/172 completed.\n",
-      "Downloading data of NYSE: MFGP\n",
-      "95/172 completed.\n",
-      "Downloading data of NYSE: MCRN\n",
-      "96/172 completed.\n",
-      "Downloading data of NYSE: MIXT\n",
-      "97/172 completed.\n",
-      "Downloading data of NYSE: MODN\n",
-      "98/172 completed.\n",
-      "Downloading data of NYSE: MSI\n",
-      "99/172 completed.\n",
-      "Downloading data of NYSE: NPTN\n",
-      "100/172 completed.\n",
-      "Downloading data of NYSE: NEWR\n",
-      "101/172 completed.\n",
-      "Downloading data of NYSE: NOK\n",
-      "102/172 completed.\n",
-      "Downloading data of NYSE: NVT\n",
-      "103/172 completed.\n",
-      "Downloading data of NYSE: OMC\n",
-      "104/172 completed.\n",
-      "Downloading data of NYSE: OOMA\n",
-      "105/172 completed.\n",
-      "Downloading data of NYSE: ORCL\n",
-      "106/172 completed.\n",
-      "Downloading data of NYSE: PAGS\n",
-      "107/172 completed.\n",
-      "Downloading data of NYSE: PANW\n",
-      "108/172 completed.\n",
-      "Downloading data of NYSE: PKE\n",
-      "109/172 completed.\n",
-      "Downloading data of NYSE: PAYC\n",
-      "110/172 completed.\n",
-      "Downloading data of NYSE: PNR\n",
-      "111/172 completed.\n",
-      "Downloading data of NYSE: PRSP\n",
-      "112/172 completed.\n",
-      "Downloading data of NYSE: PVTL\n",
-      "113/172 completed.\n",
-      "Downloading data of NYSE: PRO\n",
-      "114/172 completed.\n",
-      "Downloading data of NYSE: PSTG\n",
-      "115/172 completed.\n",
-      "Downloading data of NYSE: QTWO\n",
-      "116/172 completed.\n",
-      "Downloading data of NYSE: QTM\n",
-      "117/172 completed.\n",
-      "Downloading data of NYSE: RHT\n",
-      "118/172 completed.\n",
-      "Downloading data of NYSE: SOL\n",
-      "119/172 completed.\n",
-      "Downloading data of NYSE: RENN\n",
-      "120/172 completed.\n",
-      "Downloading data of NYSE: RXN\n",
-      "121/172 completed.\n",
-      "Downloading data of NYSE: RNG\n",
-      "122/172 completed.\n",
-      "Downloading data of NYSE: RHI\n",
-      "123/172 completed.\n",
-      "Downloading data of NYSE: RST\n"
+      "Downloading data of NYSE: TLRA\n",
+      "150/172 completed.\n",
+      "Downloading data of NYSE: TNC\n",
+      "151/172 completed.\n",
+      "Downloading data of NYSE: TDC\n",
+      "152/172 completed.\n",
+      "Downloading data of NYSE: TGH\n",
+      "153/172 completed.\n",
+      "Downloading data of NYSE: RUBI\n",
+      "154/172 completed.\n",
+      "Downloading data of NYSE: TRTN\n",
+      "155/172 completed.\n",
+      "Downloading data of NYSE: TBI\n",
+      "156/172 completed.\n",
+      "Downloading data of NYSE: TWLO\n",
+      "157/172 completed.\n",
+      "Downloading data of NYSE: TWTR\n",
+      "158/172 completed.\n",
+      "Downloading data of NYSE: TYL\n",
+      "159/172 completed.\n",
+      "Downloading data of NYSE: UIS\n",
+      "160/172 completed.\n",
+      "Downloading data of NYSE: UMC\n",
+      "161/172 completed.\n",
+      "Downloading data of NYSE: URI\n",
+      "162/172 completed.\n",
+      "Downloading data of NYSE: VEEV\n",
+      "163/172 completed.\n",
+      "Downloading data of NYSE: VMW\n",
+      "164/172 completed.\n",
+      "Downloading data of NYSE: WBT\n",
+      "165/172 completed.\n",
+      "Downloading data of NYSE: WIT\n",
+      "166/172 completed.\n",
+      "Downloading data of NYSE: WK\n",
+      "167/172 completed.\n",
+      "Downloading data of NYSE: WPP\n",
+      "168/172 completed.\n",
+      "Downloading data of NYSE: XRX\n",
+      "169/172 completed.\n",
+      "Downloading data of NYSE: YEXT\n",
+      "170/172 completed.\n",
+      "Downloading data of NYSE: ZEN\n",
+      "171/172 completed.\n",
+      "Downloading data of NYSE: ZUO\n",
+      "172/172 completed.\n"
      ]
     }
    ],
    "source": [
-    "for i in range(92, len(nyse_tech_names)):\n",
+    "for i in range(149, len(nyse_tech_names)):\n",
     "    stock_name = nyse_tech_names[i]\n",
     "    \n",
     "    print(\"Downloading data of NYSE: \" + stock_name)\n",
@@ -221,12 +184,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data of NASDAQ: TWOU\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(len(nasdaq_tech_names)):\n",
+    "for i in range(1, len(nasdaq_tech_names)):\n",
     "    stock_name = nasdaq_tech_names[i]\n",
     "    \n",
     "    print(\"Downloading data of NASDAQ: \" + stock_name)\n",
